--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ before_install:
   - curl -L https://git.io/vp6lP | sh
   - mv bin /tmp/bin
   - go get -v golang.org/x/lint/golint
+  - go get -v "github.com/google/go-github/github"
+  - go get -v "golang.org/x/oauth2"
+  - go get -v "gopkg.in/yaml.v2"
+
 script:
   - go build -o /dev/null .
   - env PATH=/tmp/bin:$PATH gometalinter .
