#5 - refactored main.go

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 
 script:
   - go build -o /dev/null .
+  - go build -o /dev/null ./cmd/gitstrap
   - env PATH=/tmp/bin:$PATH gometalinter .
 deploy:
 - provider: script
