--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,6 @@ go:
   - 1.11.x
 before_install:
   - curl -L https://git.io/vp6lP | sh
-  - mv bin /tmp/bin
   - go get -v golang.org/x/lint/golint
   - go get -v "github.com/google/go-github/github"
   - go get -v "golang.org/x/oauth2"
@@ -12,7 +11,7 @@ before_install:
 script:
   - go build -o /dev/null .
   - go build -o /dev/null ./cmd/gitstrap
-  - env PATH=/tmp/bin:$PATH gometalinter .
+  - gometalinter .
 deploy:
 - provider: script
   skip_cleanup: true
@@ -21,4 +20,3 @@ deploy:
     tags: true
     condition: $TRAVIS_OS_NAME = linux
     condition: $TRAVIS_GO_VERSION = 1.11.x
-
