Revert "travis - updated gometalinter usage"
This reverts commit 6ccec164a8225097bd1f2bb4d5c0105763007318.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ go:
   - 1.11.x
 before_install:
   - curl -L https://git.io/vp6lP | sh
+  - mv bin /tmp/bin
   - go get -v golang.org/x/lint/golint
   - go get -v "github.com/google/go-github/github"
   - go get -v "golang.org/x/oauth2"
@@ -11,7 +12,7 @@ before_install:
 script:
   - go build -o /dev/null .
   - go build -o /dev/null ./cmd/gitstrap
-  - gometalinter .
+  - env PATH=/tmp/bin:$PATH gometalinter .
 deploy:
 - provider: script
   skip_cleanup: true
@@ -20,3 +21,4 @@ deploy:
     tags: true
     condition: $TRAVIS_OS_NAME = linux
     condition: $TRAVIS_GO_VERSION = 1.11.x
+
