--- a/.rultor.yml
+++ b/.rultor.yml
@@ -10,6 +10,7 @@ merge:
     - "go get github.com/google/go-github/github"
     - "go get golang.org/x/oauth2"
     - "go get gopkg.in/yaml.v2"
+    - "go get github.com/g4s8/gopwd"
     - "go build -o /dev/null ."
     - "go build -o /dev/null ./cmd/gitstrap"
     - "gometalinter ."
