--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,7 @@ go:
 before_install:
   - curl -L https://git.io/vp6lP | sh
   - mv bin /tmp/bin
-  - go get -v "golang.org/x/lint/golint"
-  - go get -v "github.com/google/go-github/github"
-  - go get -v "golang.org/x/oauth2"
-  - go get -v "gopkg.in/yaml.v2"
-  - go get -v "github.com/g4s8/gopwd"
+  - go get -v -t ./...
 script:
   - go build -o /dev/null .
   - go build -o /dev/null ./cmd/gitstrap
