--- a/.rultor.yml
+++ b/.rultor.yml
@@ -1,5 +1,5 @@
 docker:
-  image: "g4s8/gorultor:latest"
+  image: "g4s8/gorultor:alpine"
 env:
   PATH: /usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   CGO_ENABLED: 0
