--- a/.rultor.yml
+++ b/.rultor.yml
@@ -7,6 +7,7 @@ merge:
   script:
     - "mkdir -pv /home/r/go/src/github.com/g4s8"
     - "ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap"
+    - "cd /home/r/go/src/github.com/g4s8/gitstrap"
     - "go get -t ./..."
     - "go build -o /dev/null ."
     - "go build -o /dev/null ./cmd/gitstrap"
