--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,5 @@ jobs:
       - run: go build -o /dev/null .
       - run: go build -o /dev/null ./cmd/gitstrap
       - run: go test .
-      - run: gometalinter .
-      - run: gometalinter ./cmd/gitstrap
+      - run: golangci-lint run
       - run: pdd --source=$(pwd) --verbose --file=/dev/null
