--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,3 +25,5 @@ jobs:
       run: go test -v .
     - name: Lint
       uses: actions-contrib/golangci-lint@master
+      with:
+        args: "run"
