--- a/.rultor.yml
+++ b/.rultor.yml
@@ -4,18 +4,20 @@ docker:
 env:
   PATH: /usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
   CGO_ENABLED: 0
+install:
+  script: |-
+    echo install
 merge:
-  script:
-    - "mkdir -pv /home/r/go/src/github.com/g4s8"
-    - "ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap"
-    - "cd /home/r/go/src/github.com/g4s8/gitstrap"
-    - "go env"
-    - "go get -t ./..."
-    - "go build -o /dev/null ."
-    - "go build -o /dev/null ./cmd/gitstrap"
-    - "go test ."
-    - "golangci-lint run"
-    - "pdd --source=$(pwd) --verbose --file=/dev/null"
+  script: |-
+    export CGO_ENABLED=0
+    export PATH=/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+    mkdir -pv /home/r/go/src/github.com/g4s8
+    ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap
+    cd /home/r/go/src/github.com/g4s8/gitstrap
+    go get -t ./...
+    go build -o /dev/null .
+    go build -o /dev/null ./cmd/gitstrap
+    go test .
   fast-forward: "no"
 release:
   script: |-
