--- a/.rultor.yml
+++ b/.rultor.yml
@@ -8,16 +8,17 @@ install:
   script: |
     echo install
 merge:
-  script: |
-    export CGO_ENABLED=0
-    export PATH=/usr/local/go/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-    mkdir -pv /home/r/go/src/github.com/g4s8
-    ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap
-    cd /home/r/go/src/github.com/g4s8/gitstrap
-    go get -t ./...
-    go build -o /dev/null .
-    go build -o /dev/null ./cmd/gitstrap
-    go test .
+  script:
+    - "mkdir -pv /home/r/go/src/github.com/g4s8"
+    - "ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap"
+    - "cd /home/r/go/src/github.com/g4s8/gitstrap"
+    - "go env"
+    - "go get -t ./..."
+    - "go build -o /dev/null ."
+    - "go build -o /dev/null ./cmd/gitstrap"
+    - "go test ."
+    - "golangci-lint run"
+    - "pdd --source=$(pwd) --verbose --file=/dev/null"
   fast-forward: "no"
 release:
   script: |-
