#31 - fixing rultor script

--- a/.rultor.yml
+++ b/.rultor.yml
@@ -6,7 +6,7 @@ env:
   CGO_ENABLED: 0
 merge:
   script:
-    - "cat /hom/r/script.sh"
+    - "cat /home/r/script.sh"
     - "mkdir -pv /home/r/go/src/github.com/g4s8"
     - "ln -snv $PWD /home/r/go/src/github.com/g4s8/gitstrap"
     - "cd /home/r/go/src/github.com/g4s8/gitstrap"
