--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,20 +10,14 @@ jobs:
       with:
         go-version: 1.12
       id: go
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+    - name: Check out the code
+      uses: actions/checkout@v2
     - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
     - name: Build
-      run: go build -v .
+      run: go build -v
     - name: Test
-      run: go test -v .
-#    - name: Lint
-#      uses: actions-contrib/golangci-lint@master
-#      with:
-#        args: "run"
+      run: go test -v
+    - name: Lint
+      uses: actions-contrib/golangci-lint@master
+      with:
+        args: "run"
