--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,11 +12,18 @@ jobs:
       id: go
     - name: Check out the code
       uses: actions/checkout@v2
+    - name: Cache deps
+      uses: actions/cache@v1
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
     - name: Build
       run: go build -v
     - name: Test
       run: go test -v
-    - name: Lint
-      uses: actions-contrib/golangci-lint@master
-      with:
-        args: "run"
+#     - name: Lint
+#       uses: actions-contrib/golangci-lint@master
+#       with:
+#         args: "run"
