--- a/.travis.yml
+++ b/.travis.yml
@@ -24,15 +24,15 @@
 language: go
 go:
   - 1.12.x
+env:
+  GO111MODULE: "on"
 script:
   - go build
   - go build ./cmd/gitstrap
-  - go test .
+  - go test
 deploy:
   - provider: script
     skip_cleanup: true
     script: curl -sL https://git.io/goreleaser | bash
     "on":
       tags: true
-      condition: $TRAVIS_OS_NAME = linux
-      condition: $TRAVIS_GO_VERSION = 1.12.x
