#42 - fixed goreleaser config

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,4 +1,7 @@
 ---
+before:
+  hooks:
+    - go mod download
 builds:
   -
     main: ./cmd/gitstrap/main.go
@@ -8,23 +11,24 @@ builds:
         -X "main.buildVersion={{.Env.TRAVIS_TAG}}{{.Env.TRAVIS_BUILD_NUMBER}}"
         -X "main.buildCommit={{.Env.TRAVIS_COMMIT}}"
 archives:
-  replacements:
-    darwin: Darwin
-    linux: Linux
-    windows: Windows
-    386: i386
-    amd64: x86_64
+  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}'
+    replacements:
+      darwin: Darwin
+      linux: Linux
+      windows: Windows
+      386: i386
+      amd64: x86_64
 brews:
-  github:
-    owner: g4s8
-    name: .tap
-  commit_author:
-    name: goreleaser
-    email: g4s8.public+tap@gmail.com
-  homepage: "https://github.com/g4s8/gitstrap"
-  folder: Formula
-  dependencies:
-    - git
+  - github:
+      owner: g4s8
+      name: .tap
+    commit_author:
+      name: goreleaser
+      email: g4s8.public+tap@gmail.com
+    homepage: "https://github.com/g4s8/gitstrap"
+    folder: Formula
+    dependencies:
+      - git
 checksum:
   name_template: 'checksums.txt'
 snapshot:
