--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,13 +3,13 @@ before:
   hooks:
     - go mod download
 builds:
-  -
-    main: ./cmd/gitstrap/main.go
-    # ldflags:
-    #   - -s -w
-    #     -X "main.buildDate={{.Date}}"
-    #     -X "main.buildVersion={{.Env.TRAVIS_TAG}}{{.Env.TRAVIS_BUILD_NUMBER}}"
-    #     -X "main.buildCommit={{.Env.TRAVIS_COMMIT}}"
+  - env:
+      - CGO_ENABLED=0
+    goos:
+      - linux
+      - windows
+      - darwin
+    main: ./cmd/gitstrap/
 archives:
   - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}'
     replacements:
@@ -19,7 +19,7 @@ archives:
       386: i386
       amd64: x86_64
 brews:
-  - github:
+  - tap:
       owner: g4s8
       name: .tap
     commit_author:
