--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: [@g4s8, @OrlovM]
-custom: bitcoin:bc1qc878l49ga0mjkyur3h6355dsdfkjrn265t9qp7
+github: [g4s8, OrlovM]
+custom: ["bitcoin:bc1qc878l49ga0mjkyur3h6355dsdfkjrn265t9qp7"]
